Fix some spacing issues

--- a/app/(home)/Page.module.css
+++ b/app/(home)/Page.module.css
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	width: 100%;
 	gap: 1.5rem;
-	padding: 1rem 0;
 }
 
 .minicards{
@@ -12,7 +11,6 @@
 	width: 168%;
 	margin-left: -34%;
 	gap: 1.5rem;
-	padding: 1rem 0;
 }
 
 .minicardsalt{
@@ -20,7 +18,6 @@
 	flex-direction: row;
 	width: 100%;
 	gap: 1.5rem;
-	padding: 1rem 0;
 }
 
 .matchList{
@@ -32,7 +29,7 @@
     padding: 1.5rem 3rem;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1440) {
 	.minicards,.minicardsalt{
 		width: 100%;
 		margin: 0;
