--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -6,7 +6,7 @@
 	width: 100%;
 	border-radius: var(--base);
 	overflow: hidden;
-	transition: all 0.2s ease-in-out;
+	transition: all 150ms ease-in-out;
 }
 
 .img {
@@ -15,7 +15,7 @@
 }
 
 .card:hover {
-	transform: scale(1.010);
+	transform: scale(1.005);
     transform-origin: center;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
