--- a/components/Skeleton/Skeleton.module.css
+++ b/components/Skeleton/Skeleton.module.css
@@ -2,7 +2,7 @@
     display: inline-block;
     position: relative;
     overflow: hidden;
-    background: var(--color-900);
+    background: var(--color-980);
     border-radius: 2px;
     height: 2.5rem;
 }
